src/test/deca/context/invalid/provided/method_override_return_type_error.deca
// Description:
//    Une méthode redéfinie n’a pas le même type de retour que la méthode parent.
//
// Résultats:
//    method_override_return_type_error.deca:16:12: Le type de retour de la méthode getValue n'est pas compatible avec celui de la méthode redéfinie.
//
// Historique:
//    créé le 19/01/2025
class A {
    int getValue() {
        return 10;
    }
}

class B extends A {
    boolean getValue() { 
        return true;
    }
}

{
    
    B obj = new B();
    print("Valeur : ", obj.getValue());
    
}
